# ChangeLog for dev-util/netbeans
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/netbeans/ChangeLog,v 1.161 2012/01/06 12:31:43 fordfrog Exp $

*netbeans-7.1-r1 (06 Jan 2012)

  06 Jan 2012; Miroslav Šulc <fordfrog@gentoo.org> +netbeans-7.1-r1.ebuild:
  Version bump

*netbeans-7.0.1-r2 (01 Nov 2011)

  01 Nov 2011; Miroslav Šulc <fordfrog@gentoo.org> -netbeans-7.0.1-r1.ebuild,
  +netbeans-7.0.1-r2.ebuild:
  Added missing call to overriden pkg_setup (thanks sera)

  24 Oct 2011; Miroslav Šulc <fordfrog@gentoo.org>
  -files/6.5/all-visualweb.insync.JspxSerializer.java.patch,
  -netbeans-6.5-r4.ebuild, -files/6.5/nbbuild_build.xml.patch,
  -netbeans-6.7.1.ebuild, -files/6.5/nbbuild_templates_projectized.xml.patch,
  -netbeans-6.9-r2.ebuild, -files/6.7/nbbuild_build.xml.patch,
  -netbeans-6.9-r3.ebuild, -files/6.7/nbbuild_templates_projectized.xml.patch,
  -netbeans-6.9.1.ebuild, -files/6.9/cnd.model.services-build.xml.patch,
  -netbeans-7.0.1.ebuild, -files/6.9/nbbuild_build.xml.patch,
  -files/6.9/nbbuild_templates_projectized.xml.patch,
  -files/6.9/netbeans-keychain.patch, -files/6.9/o.jruby.distro_disable.patch,
  metadata.xml:
  Moving obsolete ebuilds to java-overlay

*netbeans-7.0.1-r1 (03 Oct 2011)

  03 Oct 2011; Miroslav Šulc <fordfrog@gentoo.org> +netbeans-7.0.1-r1.ebuild:
  Updated translation sources

  16 Sep 2011; Miroslav Šulc <fordfrog@gentoo.org> netbeans-7.0.1.ebuild:
  Building NetBeans is supported only with JDK 1.6

  22 Aug 2011; Miroslav Šulc <fordfrog@gentoo.org> -netbeans-7.0.ebuild:
  Removed obsolete version

*netbeans-7.0.1 (05 Aug 2011)

  05 Aug 2011; Miroslav Šulc <fordfrog@gentoo.org> +netbeans-7.0.1.ebuild:
  Version bump

*netbeans-7.0 (21 Apr 2011)

  21 Apr 2011; Miroslav Šulc <fordfrog@gentoo.org> -netbeans-7.0_rc2.ebuild,
  +netbeans-7.0.ebuild:
  Bumped to latest version and removed rc2

*netbeans-7.0_rc2 (08 Apr 2011)
