@@ -4,12 +4,12 @@ DIST netbeans-6.8-200912041610-src.zip 317263916 RMD160 26e666740563a4e0efd39e3a
 DIST netbeans-6.8-l10n-20091209164706.tar.bz2 11453127 RMD160 2cff6a0d78aa57d8b451d778263c3f2b1ff49f15 SHA1 454d391dffc41315c3306754c6b4f4732483ef9b SHA256 3b44c5cc8e25a48bd1de631c5510327a29c7c4ab373b22e306795f0496b78a60
 DIST netbeans-7.0-build.xml-r1.patch.bz2 1344 RMD160 f8f092c93c1197ce759afbd8674ff1216d504d2d SHA1 6324909cc2dfae583f38e3544a38d1058c73a7ec SHA256 f323cb4694f6351fe47b76fa8b8b3e3f8e456e7d45ca76f9b88c5c6b90cc103f
 DIST netbeans-7.0.1-201107282000-src.zip 175987235 RMD160 0104cfeb656f76a7e8041e725c98cff3cc0734cf SHA1 3c5c47b60a4265a8a89d5ab688f6609a613ab1ec SHA256 8bf4dd2375bc9fd02adf64ca9066118e0392a33428232ccf3f9091b96557b9aa
-DIST netbeans-7.1-201112071828-src.zip 171732619 RMD160 8dcfac6a6f19edded24526c327e77b17d0a4bf0a SHA1 7438ff91225683f47bc4c0a3faee437989f03e5b SHA256 245c95fc9d78a1b38dd60fb52d256ca933efd043e2a96f26089f8a80d043d53c
+DIST netbeans-7.1.1-201203012225-src.zip 172146133 RMD160 2c8f5798bab20b2f219cbe07931776191470a5e0 SHA1 a2d1b0fa5550d0071cd45f79998851fdd4516f79 SHA256 a8ff48a5837f7952cf305d70b511c4abb77d6f1639fc7de1578aac75274450d4
 DIST netbeans-9999-r1-build.xml.patch.bz2 2379 RMD160 9713acb05ca5c9000528dd195d5297e84103df2d SHA1 209945171a811e17ad52f63896cc4f5894a5ac0c SHA256 09cfedef0fd9d713ddc71a54848d7551ce750c15e3df00af7feef37d25260a7e
 DIST netbeans-l10n-7.0.1-20110930.tar.bz2 13491185 RMD160 1db97d282a59bbee490fa06046e12c5bc8fb3437 SHA1 fcbe2052e0ee4c9e85ec4819e3c723c53dd0a01d SHA256 ba1b83dd4a543918b7147304d8bba6e35d39fe4e567432766e4749b100c9b2a3
-DIST netbeans-l10n-7.1-20111205215624.tar.bz2 13344424 RMD160 97a355e01cfe827dd7b23fd6b0953f06b2a85318 SHA1 03223b40423667b41e6b1d81ec358095e3f45241 SHA256 45738f0fd8e308cfbaf29f905179863bb449d5092eb5f8f86819dcf294be6bf8
+DIST netbeans-l10n-7.1.1-20120214091350.tar.bz2 12586999 RMD160 c9eb2ad1c262b94479b511563b4ffd743445ffb2 SHA1 5df1523cddbe1bb2b7114b2c4ec00e28c3269721 SHA256 3f104bffac464143f2efe96824a1e1c796e16d568fb39c9719152f84248e236c
 EBUILD netbeans-6.8-r1.ebuild 43136 RMD160 1ed63a12ce46beb4838913c8f65690aaec9d2a3a SHA1 bf2af027925686c64e58a34d60bbe7fada2cac4a SHA256 5b34a9b43e28cefa7518645f2850f480e25701e09b9cbb4afb304cdb893d3d80
 EBUILD netbeans-7.0.1-r2.ebuild 6842 RMD160 0cd4f3008e0188fce526463083ca518e2008e529 SHA1 b8b2cb5805b3f6a68db9845f1aae99b582ee11df SHA256 9342c08914553a40cdd4aa54c82a40340885569ef6c9b39166021e5474da7a67
-EBUILD netbeans-7.1-r1.ebuild 7074 RMD160 ed1eee0df220a22c4aa78092c6d895516cb8a443 SHA1 7a2635cdd91dd25c3868eb7e90f55ae5d0e416d1 SHA256 bc87d7c3913aa52a7d0bdf1566142eb5218573cdfc973815b76a98fe6e82cb30
-MISC ChangeLog 30602 RMD160 191b533b80dbcb7d1738212685e54170f7d2fde9 SHA1 a7cb797f3e531dfb32c319e81676c11644ad6ebf SHA256 b4dae3a85fbf6cd4003435049c835790d6a9b78fc1804bb28ad009fdc361bd31
+EBUILD netbeans-7.1.1.ebuild 7079 RMD160 34a6ca883ccc7056ee49577120cbccfa5937f14f SHA1 0ad68739a6adc1a7dbfb68556ee776241d92914e SHA256 818c95b243acebc0fdbe0c945929b975afe0434a1df2c6b10bcc1d11a586b3de
+MISC ChangeLog 30752 RMD160 2a19fd742cc8a722c4076822eee58eaf3f51bd6a SHA1 dff308349e91acd0175aa63e1b5f17f2fd3594f2 SHA256 b3480a06f132db1b5e518f6adedd2ee09f6ee13aa405c5e26d4c57b6ff034f39
 MISC metadata.xml 1222 RMD160 a5a0ca131ea1c52fa8c3efa9a3fecbddb918a0cc SHA1 44874856f49f4789a19962595493d50260333fb1 SHA256 08bcc20abdc5d2499dedd8695247221c667747bb19a75e77034ed34edbceb9b9
