@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/netbeans
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/netbeans/ChangeLog,v 1.161 2012/01/06 12:31:43 fordfrog Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/netbeans/ChangeLog,v 1.162 2012/03/05 14:21:47 fordfrog Exp $
+
+*netbeans-7.1.1 (05 Mar 2012)
+
+  05 Mar 2012; Miroslav Šulc <fordfrog@gentoo.org> -netbeans-7.1-r1.ebuild,
+  +netbeans-7.1.1.ebuild:
+  Version bump
 
 *netbeans-7.1-r1 (06 Jan 2012)
 
